--- a/app/core_app/index.html
+++ b/app/core_app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo_ciguadr.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema Core ERP - Transferencias > CIGUADR</title>
+    <title>Sistema Core ERP</title>
   </head>
   <body>
     <div id="root"></div>
